Use structure pool api